@@ -67,6 +67,8 @@ ogr_datasource::ogr_datasource(parameters const& params)
    boost::optional<std::string> file = params.get<std::string>("file");
    if (!file) throw datasource_exception("missing <file> parameter");
 
+   boost::optional<unsigned> layer_idx = params.get<unsigned>("layer_by_index");
+
    multiple_geometries_ = *params_.get<mapnik::boolean>("multiple_geometries",false);
 
    boost::optional<std::string> base = params.get<std::string>("base");
@@ -88,7 +90,30 @@ ogr_datasource::ogr_datasource(parameters const& params)
    } 
 
    // initialize layer
+   
    boost::optional<std::string> layer = params.get<std::string>("layer");
+   
+   if (layer_idx && !layer)
+   { 
+       OGRLayer  *ogr_layer = dataset_->GetLayer(*layer_idx);
+       if (ogr_layer)
+       {
+           OGRFeatureDefn* def = ogr_layer->GetLayerDefn();
+           if (def != 0) { 
+              layerName_ = def->GetName();
+              layer_ = ogr_layer;
+           }
+           /*else 
+           {
+              throw datasource_exception("No layers found!");
+           }*/
+       }
+       /*else
+       {
+          throw datasource_exception("No layers found!");
+       }*/
+   }
+   
    if (!layer) 
    {
       std::string s ("missing <layer> parameter, available layers are: ");
@@ -105,12 +130,14 @@ ogr_datasource::ogr_datasource(parameters const& params)
             s += "No layers found!";
          }
       }
-      throw datasource_exception(s);
+        throw datasource_exception(s);
    }
-   
-   layerName_ = *layer;  
-   layer_ = dataset_->GetLayerByName (layerName_.c_str());
-   if (! layer_) throw datasource_exception("cannot find <layer> in dataset");
+   else
+   {
+       layerName_ = *layer;  
+       layer_ = dataset_->GetLayerByName (layerName_.c_str());
+       if (! layer_) throw datasource_exception("cannot find <layer> in dataset");   
+   }
    
    // initialize envelope
    OGREnvelope envelope;
